# project-aria-desktop

./: README.md  config.ini  guide.md  pyproject.toml  requirements.txt
aria_desktop/: __main__.py  bus.py
aria_desktop/core/: auth.py  client.py  streaming_handler.py
aria_desktop/devices/: aria_auth.py  aria_client.py  auth.py  client.py  handler.py
aria_desktop/server/: server.py
aria_desktop/utils/: config.py  handler.py  logger.py  obser.py  observer.py  simple_observer.py  visualizer.py
aria_desktop/workers/: local_yolo.py  websocket_worker.py
