[project]
name = "project-aria-desktop"
version = "0.1.0"
description = "Desktop app for managing project aria glasses connection, streaming and host server for user inputs and outputs"
authors = [
    {name = "mickp18",email = "miperseo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
